--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 
 .container {
     width: 32rem;
-    height: 49.7rem;
+    min-height: 49.7rem;
     display: flex;
     flex-direction: column;
     align-items: center;
